--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -fr dist *.log .DS_Store",
     "webpack-dev": "NODE_ENV=development webpack-dev-server --config config/webpack.config.dev.js --progress",
     "webpack-prod": "NODE_ENV=production webpack --config config/webpack.config.prod.js --progress",
-    "build": "yarn run clean && yarn run webpack-prod",
+    "build": "yarn run webpack-prod",
     "start": "yarn run clean && yarn run webpack-dev"
   },
   "devDependencies": {
