--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "webpack": "^3.7.1",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.2",
     "webpack-merge": "^4.1.0"
   },
