--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": [
-    "env", "react"
+    "env", "react", "stage-2"
   ],
   "plugins": [
     "react-hot-loader/babel",
-    "dynamic-import-webpack"
+    "transform-decorators-legacy"
   ]
 }
