--- a/package.json
+++ b/package.json
@@ -12,30 +12,40 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
-    "babel-plugin-dynamic-import-webpack": "^1.0.1",
+    "babel-plugin-import": "^1.7.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-lean-imports": "^0.3.3",
+    "eslint-plugin-react": "^7.7.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
+    "happypack": "^5.0.0-beta.3",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.5.3",
     "open-browser-webpack-plugin": "^0.0.5",
+    "react-hot-loader": "^4.0.1",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
+    "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
-    "webpack": "^3.8.1",
+    "webpack": "^4.5.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.2",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.1.1",
-    "react-router": "^4.2.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2"
   }
 }
