--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
   "presets": [
-    "env", "react", "stage-2"
+    "env",
+    "react",
+    "stage-2"
   ],
   "plugins": [
     "react-hot-loader/babel",
