--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm -fr dist *.log .DS_Store",
     "webpack-dev": "NODE_ENV=development webpack-dev-server --config config/webpack.config.dev.js --progress",
-    "webpack-prod": "NODE_ENV=production webpack --config config/webpack.config.prod.js --progress",
+    "webpack-prod": "NODE_ENV=production webpack --config config/webpack.config.prod.js --optimize-minimize --progress",
     "build": "yarn run clean && yarn run webpack-prod",
     "start": "yarn run clean && yarn run webpack-dev"
   },
@@ -36,7 +36,6 @@
     "react-hot-loader": "^4.0.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.3",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "webpack": "^4.5.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-cli": "^2.0.14",
