--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-hot-loader": "^4.0.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.3",
+    "stylelint": "^9.2.0",
+    "stylelint-config-standard": "^18.2.0",
     "webpack": "^4.5.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-cli": "^2.0.14",
